Updated styles, department view and controller, exhibitions